[cssom] Don't use the element layout object when querying a non-existent pseudo.

BUG=758596

Change-Id: I6defc3ce03d9f3cd80cec770d9412e55dfbd9580
Reviewed-on: https://chromium-review.googlesource.com/636965
Commit-Queue: Emilio Cobos Álvarez <emilio@chromium.org>
Reviewed-by: Rune Lillesveen <rune@opera.com>
Cr-Commit-Position: refs/heads/master@{#497990}