third_party/WebKit/Source/core/css/CSSComputedStyleDeclaration.h
@@ -35,6 +35,7 @@ namespace blink {
 
 class CSSVariableData;
 class ExceptionState;
+class LayoutObject;
 class MutableStylePropertySet;
 class Node;
 class ComputedStyle;
@@ -84,6 +85,10 @@ class CORE_EXPORT CSSComputedStyleDeclaration final
   // on Elements, but right now editing creates these for text nodes. We should
   // fix that.
   Node* StyledNode() const;
+
+  // The styled layout object is the layout object corresponding to the node
+  // being queried, if any.
+  LayoutObject* StyledLayoutObject() const;
 
   // CSSOM functions.
   CSSRule* parentRule() const override;
